<resources>
    <string name="app_name">Shaqra Students Contact</string>

    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="email_and_password_required">email and password must not be empty!</string>
    <string name="hint_name">full name</string>
    <string name="register">Register</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="hint_email">Email</string>
    <string name="account">Account</string>


    <!--    user type related...-->
    <string name="user_type">user type</string>
    <string name="student">Student</string>
    <string name="professor">Professor</string>

    <string name="email_missing_message">please enter your email address!</string>
    <string name="password_missing_message">please enter your password!</string>
    <string name="name_missing_message">please enter your full name !</string>
    <string name="type_missing_message">please select your account type!</string>


    <!--    status related-->
    <string name="status_new">NEW</string>
    <string name="status_rejected">REJECTED</string>
    <string name="status_processing">PROCESSING</string>
    <string name="status_completed">COMPLETED</string>

    <string name="show_message">Show message</string>
    <string name="ok">Ok</string>
    <string name="message">Message : </string>
    <string name="start_at">start at</string>
    <string name="end_at">end at</string>
    <string name="choose_department">Select department</string>
    <string name="professor_email_suffex">.cs.su@gmail.com</string>
    <string name="please_provide_a_professor_email">please provide a valid professor email</string>
    <string name="student_email_suffex">std.su.edu.sa</string>
    <string name="please_provide_a_valid_student_email">please provide a valid student email</string>
    <string name="community">Community</string>
    <string name="ask_professors">Ask professors</string>
    <string name="learning_resources">Learning Resources</string>
    <string name="ask_honor_students">chat with honor student</string>
    <string name="book_library">Book library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="students_questions">Students questions</string>
    <string name="set_free_time_schedule">Set free time schedule</string>
    <string name="profile">Profile</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="update">Update</string>
    <string name="field_missing_message">Please fill all fields</string>
    <string name="password_not_same">Please make sure that confirm password is the same as password</string>
    <string name="logout">Logout</string>
    <string name="place_holder">pp</string>
    <string name="books_list">Books List</string>
    <string name="write_question">Write a question</string>
    <string name="write_reply">Write a reply</string>
    <string name="post_new_question">Post new question</string>
    <string name="search">Search</string>
    <string name="replies">replies</string>
    <string name="add_reply">Add reply</string>
    <string name="post_reply">Post a reply</string>
    <string name="student_name">Student name</string>
    <string name="reply">Reply</string>
    <string name="date">date</string>
    <string name="question">Question</string>
    <string name="you_cant_post_empty_question">You cant post an empty question</string>
    <string name="common_questions">common questions</string>
    <string name="you_cant_post_empty_reply">You cant post an empty reply</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="professor_name">Professor name</string>
    <string name="department">Department</string>
    <string name="specialization">Specialization</string>
    <string name="all">All questions</string>
    <string name="free_time">Free time</string>
    <string name="to"> -> </string>
    <string name="ask_a_question">Ask Question</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="send">Send</string>
    <string name="missing_fields_message">All fields are required</string>
    <string name="asked_questions">Asked questions</string>
    <string name="answer">Answer</string>
    <string name="no_answer_yet">No answer yet</string>
    <string name="reply_content">Reply Content</string>
    <string name="edit_password">Edit Password</string>
    <string name="chatting">Chatting</string>
    <string name="honor_student_chat_list">Honor Student Chat List</string>
    <string name="bookmarked">Book Marked</string>
    <string name="screenshot">Screenshot</string>
    <string name="book">Book</string>
    <string name="empty_reply">You can not send an empty reply</string>
    <string name="requested_question">Requested questions</string>
    <string name="schedule">schedule</string>
    <string name="honor_student_name">Honor student name</string>
    <string name="show_reply">Show your reply</string>
    <string name="honor_details">Honor Details</string>
    <string name="honor_students">Honor students</string>
    <string name="hint_dept">Department</string>
    <string name="hint_specialization">Specialization</string>
    <string name="dept_missing_message">Please enter your department</string>
    <string name="spec_missing_message"> Please enter your Specialization</string>
    <string name="hint_verification_code">Verification code</string>
    <string name="btn_verify">Verify</string>
    <string name="password_edit">Password edit successfully</string>
    <string name="wrong_pass">Wrong email or password</string>
    <string name="success_post_question">"Post question successfully "</string>
    <string name="success_post_reply">"Post reply successfully "</string>
    <string name="send_question_successfully">Question send successfully</string>
    <string name="send_report_successfully">Report send successfully</string>
    <string name="some_error">Some error happened please try again later</string>
    <string name="success_update_schedule">Schedule updated successfully!</string>
    <string name="error_code">Code is not correct</string>
    <string name="correct_code">"Correct code "</string>
    <string name="rulesTitle">المسموح به من المؤكلات:</string>
    <string name="rule1">برادات الشاهي والقهوة</string>
    <string name="rule2">المشروبات الخارجية وذلك عند الدخول بها في الصباح فقط</string>
    <string name="rule3">الأكل الخراجي كالساندويش لا تزيد عن اربع أشخاص</string>
    <string name="rule4">الحلا الشخصي</string>

    <string name="bansTitle">الممنوعات</string>
    <string name="bansTitle1">الزي الرسمي داخل الجامعة :</string>
    <string name="ban1">الملابس تكون حشمة وغير لاصقة بالجسم</string>
    <string name="ban2">لبس العباءة داخل الحرم الجامعي أي داخل القاعات أو المبنى أو الساحات الخارجية</string>
    <string name="bansTitle2">الممنوعات :</string>
    <string name="ban3">السمعات الصوتية</string>
    <string name="ban4">رفع صوت الموسيقى في الجوال</string>
    <string name="ban5">تصوير المبنى بشكل عام سواء شخصي أو عام</string>
    <string name="bansTitle3">المؤكلات الممنوعة :</string>
    <string name="ban6">صواني الحلا</string>
    <string name="ban7">صواني الأكل والحافظات</string>
    <string name="ban8">إدخال أكل من المطعم</string>
    <string name="university_rules">University Rules</string>
    <string name="please_verify_your_email">Please verify your email</string>
    <string name="search_book">Search for book</string>
    <string name="loggedin_success">Logged in successfully</string>
    <string name="search_professor">Search for professor</string>
    <string name="report_title">Report title</string>
    <string name="report_content">Report content</string>
    <string name="send_report">Send report</string>
    <string name="email_sent">Verification code sent</string>


</resources>