<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student.fragments.UniversityRulesFragment"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".student.fragments.UniversityRulesFragment"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesTitle"
            android:textSize="22sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule1"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule2"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule3"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule4"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bansTitle"
            android:textSize="22sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bansTitle1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ban1"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ban2"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bansTitle2"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ban3"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ban4"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ban5"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bansTitle3"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ban6"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ban7"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ban8"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>