<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_professor"
    app:startDestination="@id/menu_requested_questions">

    <fragment
        android:id="@+id/menu_requested_questions"
        android:name="com.example.shaqrastudentscontact.professor.fragments.ProfessorRequestedQuestionsFragment"
        android:label="@string/requested_question"
        tools:layout="@layout/fragment_professor_requested_questions" >
        <action
            android:id="@+id/action_menu_requested_questions_to_ReplyToQuestionFragment"
            app:destination="@id/ReplyToQuestionFragment"
            app:popUpTo="@id/menu_requested_questions"
            />
    </fragment>

    <fragment
        android:id="@+id/ReplyToQuestionFragment"
        android:name="com.example.shaqrastudentscontact.professor.fragments.ProfessorReplyQuestionFragment"
        android:label="@string/reply"
        tools:layout="@layout/fragment_professor_reply_question" />
    <fragment
        android:id="@+id/menu_prof_profile"
        android:name="com.example.shaqrastudentscontact.professor.fragments.ProfessorProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_professor_profile">
        <action
            android:id="@+id/action_ProfessorProfile_to_EditPassFragment"
            app:destination="@id/EditPassFragment"
            app:popUpTo="@id/menu_prof_profile" />

    </fragment>


    <fragment
        android:id="@+id/EditPassFragment"
        android:name="com.example.shaqrastudentscontact.student.EditPasswordFragment"
        android:label="@string/edit_password"
        tools:layout="@layout/fragment_edit_password" />

    <fragment
        android:id="@+id/menu_update_schedule"
        android:name="com.example.shaqrastudentscontact.professor.fragments.ScheduleFreeTime"
        android:label="@string/set_free_time_schedule"
        tools:layout="@layout/fragment_professor_schedule_free_time" />


</navigation>