<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.UpdateProfile">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@color/white"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"  />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/confirm_pass"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@color/white"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"  />


        <!-- Login Button -->
        <Button
            android:id="@+id/btn_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/update"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"/>


    </LinearLayout>

</LinearLayout>